kubernetes/homebridge/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge-http
spec:
  ports:
    - name: ui
      port: 8581
      targetPort: 8581
    - name: webhook
      port: 51828
      targetPort: 51828

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homebridge
spec:
  replicas: 1
  serviceName: homebridge-http
  template:
    spec:
      hostNetwork: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: homebridge
      containers:
      - name: homebridge
        image: homebridge
        imagePullPolicy: Always
        ports:
        - name: ui
          containerPort: 8581
        - name: webhook
          containerPort: 51828
        - name: bonjour
          containerPort: 5353
          hostPort: 5353
        - name: bridge
          containerPort: 51272
          hostPort: 51272
        volumeMounts:
        - name: data
          mountPath: /homebridge
        resources:
          requests:
            memory: "512Mi"
            cpu: "1000m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
