kubernetes/homebridge/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: homebridge
  name: homebridge
spec:
  rules:
  - host: homebridge.yuha0.com
    http:
      paths:
      - backend:
          serviceName: homebridge-ui
          servicePort: 8081
        path: /
  tls:
  - hosts:
    - homebridge.yuha0.com
