kubernetes/homebridge/sample-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/10"
  labels:
    app: homebridge
  name: homebridge
spec:
  rules:
  - host: homebridge.example.com
    http:
      paths:
      - backend:
          serviceName: homebridge-ui
          servicePort: 8081
        path: /
  tls:
  - hosts:
    - homebridge.example.com
    secretName: homebridge-example-com
